Removed -XX:MaxPermSize=256m from JVM options for Tycho Surefire tests given that build runs under Java 8 where the option is no longer supported